--- a/Flores_NilverTI/index.html
+++ b/Flores_NilverTI/index.html
@@ -10,11 +10,18 @@
 </head>
 <body>
     <div class="greetings">
+         <!-- Fresas animadas en el fondo -->
+   <div class="strawberry strawberry--1"></div>
+   <div class="strawberry strawberry--2"></div>
+   <div class="strawberry strawberry--3"></div>
+   <div class="strawberry strawberry--4"></div>
+   <div class="strawberry strawberry--5"></div>
 
-        <span>H</span>
-        <span>O</span>
-        <span>L</span>
+        <span>T</span>
+        <span>E</span>
         <span>A</span>
+        <span>M</span>
+        <span>O</span>
     </div>
     <div class="greetings">
         <span></span>
